<resources>
    <string name="app_name">e-Money Bus demo</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_map">Peta</string>
    <string name="title_price">Harga</string>
    <string name="title_history">Riwayat</string>
    <string name="title_account">Akun</string>
    <string name="title_comment">Komentar</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="balance">10000</string>
    <string name="usage">15000</string>
    <string name="harga_sby">Rp.0 Rp.5000 Rp.7000 Rp.9.000 Rp.11.000 Rp.12.500 Rp.14.000 Rp.17.000</string>
    <string name="sby">SURABAYA PANDAAN SUKOREJO PURWOSARI PURWODADI LAWANG SINGOSARI MALANG</string>
    <string name="harga_mlg">Rp.0 Rp.3000 Rp.5000 Rp.6500 Rp.8.000 Rp.10.000 Rp.12.000 Rp.17.000</string>
    <string name="mlg">MALANG SINGOSARI LAWANG PURWODADI PURWOSARI SUKOREJO PANDAAN SURABAYA</string>
</resources>
