<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.PriceFragment">

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/capture2"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="30dp"
                android:background="#9fff"
                android:orientation="vertical"
                >
                <EditText
                    android:gravity="center_horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="HARGA"
                    android:layout_margin="20dp"
                    android:textStyle="bold"
                    android:textSize="25dp"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:layout_width="180dp"
                        android:layout_height="wrap_content"
                        android:text="@string/mlg"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        />
                    <EditText
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="@string/harga_mlg"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:layout_width="180dp"
                        android:layout_height="wrap_content"
                        android:text="@string/sby"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        />
                    <EditText
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="@string/harga_sby"/>

                </LinearLayout>
            </LinearLayout>
        </ScrollView>






    </RelativeLayout>

</FrameLayout>